--- a/culturefeed_social/translations/culturefeed_social.nl.po
+++ b/culturefeed_social/translations/culturefeed_social.nl.po
@@ -35,7 +35,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2013-08-21 11:13+0200\n"
-"PO-Revision-Date: 2013-08-21 11:37+0100\n"
+"PO-Revision-Date: 2013-08-21 11:43+0100\n"
 "Last-Translator: NAME <EMAIL@ADDRESS>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
@@ -620,7 +620,7 @@ msgstr "een beoordeling gegeven"
 
 #: lib/Drupal/CultureFeedActivityConfigReview.php:20
 msgid "review"
-msgstr "beordelen"
+msgstr "beoordeling"
 
 #: lib/Drupal/CultureFeedActivityConfigReview.php:21
 msgid "Reviews"
