--- a/culturefeed_messages/translations/culturefeed_messages.nl.po
+++ b/culturefeed_messages/translations/culturefeed_messages.nl.po
@@ -23,7 +23,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
 "X-Generator: Poedit 1.5.7\n"
 
-#: culturefeed_messages.module:106;163
+#: culturefeed_messages.module:106;163;286
 msgid "My messages"
 msgstr "Mijn berichten"
 
@@ -53,8 +53,7 @@ msgstr "CultureFeed Berichten"
 
 #: culturefeed_messages.info:0
 msgid "CultureFeed Messages adds the ability to send messages to other users."
-msgstr ""
-"Met CultureFeed Berichten kan je berichten sturen naar andere gebruikers."
+msgstr "Met CultureFeed Berichten kan je berichten sturen naar andere gebruikers."
 
 #: culturefeed_messages.info:0
 msgid "CultureFeed"
@@ -114,7 +113,7 @@ msgstr "Bericht verzonden"
 
 #: includes/pages.inc:251
 msgid "This action cannot be undone"
-msgstr "Deze actie kan je niet ontdoen"
+msgstr "Deze actie kan je niet ongedaan maken"
 
 #: includes/pages.inc:252
 msgid "Are you sure you want to delete this message?"
