--- a/culturefeed_ui/translations/culturefeed_ui.nl.po
+++ b/culturefeed_ui/translations/culturefeed_ui.nl.po
@@ -598,7 +598,7 @@ msgstr ""
 
 #: culturefeed_ui.module:434
 msgid "Logout"
-msgstr "Uitloggen"
+msgstr "Afmelden"
 
 #: culturefeed_ui.module:455
 msgid "CultuurNet User Interface cache"
