UIVSUP-144: Added validation on profile edit form

--- a/culturefeed_ui/translations/culturefeed_ui.nl.po
+++ b/culturefeed_ui/translations/culturefeed_ui.nl.po
@@ -645,3 +645,5 @@ msgstr "Maakt een standaard user interface voor Culturefeed"
 msgid "CultureFeed"
 msgstr "CultureFeed"
 
+msgid "The maximum of 250 characters is exceeded"
+msgstr "Het maximum aantal van 250 karakters is overschreden"
