--- a/culturefeed_pages/translations/culturefeed_pages.de.po
+++ b/culturefeed_pages/translations/culturefeed_pages.de.po
@@ -199,8 +199,8 @@ msgid "Add member as administrator"
 msgstr "Mitglied als Administrator hinzufügen"
 
 #: culturefeed_pages.module:386 includes/helpers.inc:38 theme/theme.inc:69
-msgid "Follow page"
-msgstr "Seite folgen"
+msgid "Followe"
+msgstr "Folgen"
 
 #: culturefeed_pages.module:396 includes/helpers.inc:35
 msgid "Unfollow page"
@@ -862,14 +862,6 @@ msgstr "Antrag darauf, Administrator zu werden, versenden"
 #: theme/culturefeed-pages-user-search-result.tpl.php:2
 msgid "No users found"
 msgstr "Keine Nutzer gefunden"
-
-#: theme/theme.inc:25
-msgid "Does your organization or association has no page yet?"
-msgstr "Hat Ihre Organisation bzw. Ihr Verein noch keine Seite?"
-
-#: theme/theme.inc:25
-msgid "Create a new page"
-msgstr "Eine neue Seite erstellen"
 
 #: theme/theme.inc:84
 msgid "More info"
