CEP-152 translate allowed extensions

--- a/culturefeed_pages/translations/culturefeed_pages.nl.po
+++ b/culturefeed_pages/translations/culturefeed_pages.nl.po
@@ -873,3 +873,5 @@ msgid_plural "@count reactions"
 msgstr[0] "@count reactie"
 msgstr[1] "@count reacties"
 
+msgid "Allowed extensions: jpg, jpeg, gif or png"
+msgstr "Toegelaten formaten: jpg, jpeg, gif of png"
