copy manage_members_list

--- a/culturefeed_pages/translations/culturefeed_pages.nl.po
+++ b/culturefeed_pages/translations/culturefeed_pages.nl.po
@@ -875,3 +875,9 @@ msgstr[1] "@count reacties"
 
 msgid "Allowed extensions: jpg, jpeg, gif or png"
 msgstr "Toegelaten formaten: jpg, jpeg, gif of png"
+
+msgid "Administrator"
+msgstr "Beheerder"
+
+msgid "Member"
+msgstr "Lid"
