--- a/culturefeed_ui/translations/culturefeed_ui.nl.po
+++ b/culturefeed_ui/translations/culturefeed_ui.nl.po
@@ -619,12 +619,12 @@ msgid "Culturefeed ui: something for you?"
 msgstr ""
 
 #: culturefeed_ui.module:411
-msgid "My account"
-msgstr "Mijn account"
+msgid "My profile"
+msgstr "Mijn profiel"
 
 #: culturefeed_ui.module:413
-msgid "How other users will see your account"
-msgstr "Hoe andere gebruikers je account zien"
+msgid "How other users will see your profile"
+msgstr "Hoe andere gebruikers je profiel zien"
 
 #: culturefeed_ui.module:419
 msgid "Change name, address, profile picture, …"
