CF-72 set default message if config->action is not set

--- a/culturefeed_social/translations/culturefeed_social.nl.po
+++ b/culturefeed_social/translations/culturefeed_social.nl.po
@@ -275,6 +275,10 @@ msgstr "Bekijk profiel"
 msgid "Remove"
 msgstr "Verwijderen"
 
+#: includes/pages.inc:250
+msgid "Remove action"
+msgstr "Actie verwijderen"
+
 #: includes/pages.inc:144;441
 msgid "Private"
 msgstr "Privé"
